fix spacing

--- a/cms/medexCms/staticfiles/scss/examinations/edit_medical_team.scss
+++ b/cms/medexCms/staticfiles/scss/examinations/edit_medical_team.scss
@@ -13,6 +13,14 @@
   }
 }
 
+.small-margin {
+    margin-bottom: $medex-spacing-sm !important;
+}
+
+.medium-margin {
+    margin-bottom: $medex-spacing-lg !important;
+}
+
 .medex-tab-header {
   margin-top: $medex-spacing-md;
   margin-bottom: $medex-spacing-md !important;
